--- a/web/src/styles/globals.css
+++ b/web/src/styles/globals.css
@@ -7,6 +7,7 @@
     --color-background: var(--background);
     --color-foreground: var(--foreground);
     --font-inter: var(--font-inter);
+    --font-noto: var(--font-noto)
     --color-sidebar-ring: var(--sidebar-ring);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -112,10 +113,27 @@
 }
 
 @layer base {
-  * {
-    @apply border-border outline-ring/50;
+    * {
+      @apply border-border outline-ring/50;
     }
-  body {
-    @apply bg-background text-foreground;
+    body {
+      @apply bg-background text-foreground font-noto;
     }
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 600;
+    font-family: "Inter", sans-serif
+}
+
+button {
+    cursor: pointer;
+}
+
+button:disabled {
+    cursor: default;
+}
+
+button, input, a {
+    font-family: "Noto Sans", sans-serif;
 }
