--- a/web/src/styles/globals.css
+++ b/web/src/styles/globals.css
@@ -7,7 +7,7 @@
     --color-background: var(--background);
     --color-foreground: var(--foreground);
     --font-inter: var(--font-inter);
-    --font-noto: var(--font-noto)
+    --font-noto: var(--font-noto);
     --color-sidebar-ring: var(--sidebar-ring);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -79,8 +79,8 @@
 }
 
 .dark {
-    --background: oklch(0.145 0 0);
-    --foreground: oklch(0.985 0 0);
+    --background: #002E3C;
+    --foreground: #FFD700;
     --card: oklch(0.205 0 0);
     --card-foreground: oklch(0.985 0 0);
     --popover: oklch(0.205 0 0);
