--- a/web/src/app/(bank)/home.scss
+++ b/web/src/app/(bank)/home.scss
@@ -1,10 +1,10 @@
-#balance {
+#home {
     .custom-scrollbar::-webkit-scrollbar {
         width: 8px;
     }
 
     .custom-scrollbar::-webkit-scrollbar-track {
-        background: #002E3C;
+        background: var(--card);
         border-radius: 4px;
     }
 
