--- a/web/src/components/App/Chat/chat.scss
+++ b/web/src/components/App/Chat/chat.scss
@@ -1,7 +1,8 @@
 #chat {
-    .chat-body {
+    .chat-body, .suggestions {
         &::-webkit-scrollbar {
             width: 4px;
+            height: 4px;
         }
 
         &::-webkit-scrollbar-track {
